maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:26: error: reassignment to val
			compteur = compteur +1
                                 ^JediEscaper:27: error: not found: value getIndications
			if (getIndications==9999){parcours(i,j-1,compteur)}
                            ^JediEscaper:27: error: recursive method parcours needs result type
			if (getIndications==9999){parcours(i,j-1,compteur)}
                                                  ^JediEscaper:31: error: reassignment to val
				compteur = compteur +1
                                         ^JediEscaper:32: error: not found: value getIndications
				if (getIndications==9999){parcours(i-1,j,compteur)}
                                    ^JediEscaper:36: error: reassignment to val
					compteur = compteur +1
                                                 ^JediEscaper:37: error: not found: value getIndications
					if (getIndications==9999){parcours(i+1,j,compteur)}
                                            ^JediEscaper:40: error: not found: value setIndications
						setIndications(i,j+1,setIndications(i,j)+1)
                                                ^JediEscaper:41: error: reassignment to val
						compteur = compteur +1
                                                         ^JediEscaper:42: error: not found: value getIndications
						if (getIndications==9999){parcours(i,j+1,compteur)}
                                                    ^